--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,15 @@
 @import "tailwindcss";
 html,
 body {
-  width: 400px;
-  height: 400px;
+  width: 375px;
+  min-height: 400px;
+  max-height: fit-content;
   padding: 0;
   margin: 0;
 }
 
 body {
   background-color: rgb(36, 36, 36);
+  height: 100%;
+  overflow-y: auto;
 }
